--- a/assets/html/quiz.html
+++ b/assets/html/quiz.html
@@ -1,86 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mulher e Sociedade</title>
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- CSS -->
-  <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">3°B</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Sobre
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"></a>Info</li>
-                    <li><a class="dropdown-item" href="#">Informação</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">.....</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </li>
-              </ul>
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="btn btn-outline-primary me-2" href="#">Registrar</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Login
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-end px-4 py-3">
-                    <form class="px-4 py-3">
-                      <div class="mb-3">
-                        <label for="exampleInputNome1" class="form-label">Nome</label>
-                        <input type="text" class="form-control" id="exampleInputNome1">
-                      </div>
-                      <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-                      </div>
-                      <div class="mb-3 form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                      </div>
-                      <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Esqueceu a senha?</a>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+    <link rel="manifest" href="../../public/manifest.json">
+    <link rel="shortcut icon" href="../../public/favicon.ico">
+    <title>Incrível Quiz</title>
+    <link rel="stylesheet" href="../css/quiz.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+  </head>
+  <body id="page-home">
+    <div id="loader"></div>
+    <!-- start Quiz button -->
+    <div class="start_btn">
+      <button class="btn" id="button_play">Jogar o Quiz</button>
+      <a class="btn" id="button_score" href="highscores.html"
+        >Maiores Pontuações</a
+      >
+    </div>
+
+    <!-- Info Box -->
+    <div class="info_box">
+      <div class="info-title"><span>Algumas regras deste Quiz</span></div>
+      <div class="info-list">
+        <div class="info">
+          1. Você terá apenas<span> 15 segundos</span> para cada pergunta.
+        </div>
+        <div class="info">
+          2. Depois de selecionar sua resposta não pode ser desfeita.
+        </div>
+        <div class="info">
+          3. Você não pode selecionar opção depois que o tempo acabar.
+        </div>
+        <div class="info">
+          4. Você não pode sair do Quiz enquanto estiver jogando.
+        </div>
+        <div class="info">5. Você receberá 10 pontos por resposta correta.</div>
+      </div>
+      <div class="buttons">
+        <button class="quit">Sair do Quiz</button>
+        <button class="restart">Continuar</button>
       </div>
     </div>
-  </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <!-- Quiz Box -->
+    <div class="quiz_box">
+      <header>
+        <div class="title">Incrível Quiz</div>
+        <div class="timer">
+          <div class="time_left_txt">Tempo Restante</div>
+          <div class="timer_sec">15</div>
+        </div>
+        <div class="time_line"></div>
+      </header>
+      <section>
+        <div class="que_text">
+          <!-- Here I've inserted question from JavaScript -->
+        </div>
+        <div class="option_list">
+          <!-- Here I've inserted options from JavaScript -->
+        </div>
+      </section>
+      <!-- footer of Quiz Box -->
+      <footer>
+        <div class="total_que">
+          <!-- Here I've inserted Question Count Number from JavaScript -->
+        </div>
+        <div id="hud-item">
+          <p class="hud-prefix">Pontuação <span class="hud-main-text" id="score">0</span></p>
+        </div>
+        <button class="next_btn">Próxima Questão</button>
+      </footer>
+    </div>
+    <!-- Result Box -->
+    <div class="result_box">
+      <div class="icon">
+        <i class="fas fa-crown"></i>
+      </div>
+      <div class="complete_text">Você completou o Quiz!!</div>
+      <div class="score_text">
+        <!-- Here I've inserted Score Result from JavaScript -->
+      </div>
+      <div class="buttons">
+        <button class="restart">Salvar Quiz</button>
+        <button class="quit">Sair do Quiz</button>
+      </div>
+    </div>
+    <!-- Inside this JavaScript file I've inserted Questions and Options only -->
+    <script src="../data/questions.js"></script>
+    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
+    <script src="../js/quiz.js"></script>
+  </body>
 </html>
