--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                                 <li><a class="dropdown-item" href="#contato">Integrantes</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="assets/html/quiz.html">Quiz</a>
+                        </li>
                     </ul>
                 </div>
             </div>
